--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.9.25",
+    "mongoose": "^5.11.18",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.7"
   }
 }
